log
Wed 12 Apr 2023 01:54:25 PM UTC: 
 tests:  0|6
total_score: 0/70
00baf16
Thu 11 May 2023 01:27:06 PM UTC: 
 hashmap.c | 5 +++++
 1 file changed, 5 insertions(+)
 tests:  0|6
total_score: 0/70
3e6295b
Thu 11 May 2023 01:27:29 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|6
total_score: 0/70
10ea6fa
Thu 11 May 2023 01:28:20 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
d37fd66
Thu 11 May 2023 01:55:03 PM UTC: 
 hashmap.c | 15 +++++++++++++++
 1 file changed, 15 insertions(+)
 tests:  0|0
84d54a5
Thu 11 May 2023 02:01:12 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 30/70
9d7aad4
Thu 11 May 2023 02:02:40 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
d05f962
Thu 11 May 2023 02:19:10 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 30/70
7225e79
Thu 11 May 2023 02:20:13 PM UTC: 
 hashmap.c | 6 ------
 1 file changed, 6 deletions(-)
 tests:  5|4
total_score: 30/70
bbf1eee
Thu 11 May 2023 02:24:13 PM UTC: 
 hashmap.c | 10 +++++-----
 1 file changed, 5 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 20/70
f81a366
Thu 11 May 2023 02:30:30 PM UTC: 
 hashmap.c | 16 +++++++++++++---
 1 file changed, 13 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 30/70
94c86a3
Thu 11 May 2023 02:42:45 PM UTC: 
 hashmap.c | 13 +++++++++++--
 1 file changed, 11 insertions(+), 2 deletions(-)
 tests:  6|4
total_score: 30/70
a33c043
Thu 11 May 2023 02:43:16 PM UTC: 
 hashmap.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|0
6be2a8a
Thu 11 May 2023 02:47:13 PM UTC: 
 hashmap.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  8|3
total_score: 40/70
f4b18aa
Thu 11 May 2023 02:52:38 PM UTC: 
 hashmap.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
 tests:  8|3
total_score: 40/70
92da55e
Thu 11 May 2023 03:01:38 PM UTC: 
 hashmap.c | 18 ++++++++++++++++--
 1 file changed, 16 insertions(+), 2 deletions(-)
 tests:  11|2
total_score: 50/70
09d6cd0
Thu 11 May 2023 03:10:07 PM UTC: 
 hashmap.c | 12 +++++++++++-
 1 file changed, 11 insertions(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
8ba1dad
Thu 11 May 2023 03:11:39 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  12|2
total_score: 50/70
38a3aaf
Thu 11 May 2023 08:19:50 PM UTC: 
 hashmap.c | 9 +++++++++
 1 file changed, 9 insertions(+)
 tests:  12|2
total_score: 50/70
b4f13ec
Thu 11 May 2023 08:31:38 PM UTC: 
 hashmap.c | 22 +++++++++++++---------
 1 file changed, 13 insertions(+), 9 deletions(-)
 tests:  12|2
total_score: 50/70
33b6652
Thu 11 May 2023 08:43:41 PM UTC: 
 hashmap.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  12|2
total_score: 50/70
4a827e7
Thu 11 May 2023 08:44:06 PM UTC: 
 hashmap.c | 15 +++++++--------
 1 file changed, 7 insertions(+), 8 deletions(-)
 tests:  12|2
total_score: 50/70
82a85bf
Thu 11 May 2023 08:44:21 PM UTC: 
 hashmap.c | 24 ++++++++++++++----------
 1 file changed, 14 insertions(+), 10 deletions(-)
 tests:  12|2
total_score: 50/70
3a224b8
Thu 11 May 2023 08:44:46 PM UTC: 
 hashmap.c | 9 +++------
 1 file changed, 3 insertions(+), 6 deletions(-)
 tests:  12|2
total_score: 50/70
2543fde
Thu 11 May 2023 08:44:52 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
64cfe5b
Thu 11 May 2023 08:45:44 PM UTC: 
 hashmap.c | 9 ++++++---
 1 file changed, 6 insertions(+), 3 deletions(-)
 tests:  11|2
total_score: 50/70
89e98a3
Thu 11 May 2023 08:46:09 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:4:
hashmap.c: In function ‘firstMap’:
hashmap.c:125:29: error: returning ‘char *’ from a function with incompatible return type ‘Pair *’ [-Werror=incompatible-pointer-types]
  125 |       return map->buckets[i]->key;
      |              ~~~~~~~~~~~~~~~^~~~~
cc1: all warnings being treated as errors
Compilation failed
1cc750e
Thu 11 May 2023 08:46:27 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|2
total_score: 50/70
8e0b15e
Thu 11 May 2023 08:46:38 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
fa8a2f2
Thu 11 May 2023 08:49:02 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
ba0ed2f
Thu 11 May 2023 08:51:12 PM UTC: 
 hashmap.c | 30 +++++++++++++++++++++---------
 1 file changed, 21 insertions(+), 9 deletions(-)
test.c: In function ‘nextMap’:
test.c:453:5: error: ‘main’ is normally a non-static function [-Werror=main]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:511:1: error: expected declaration or statement at end of input
  511 | }
      | ^
test.c:512: error: control reaches end of non-void function [-Werror=return-type]
At top level:
test.c:453:5: error: ‘main’ defined but not used [-Werror=unused-function]
  453 | int main( int argc, char *argv[] ) {
      |     ^~~~
test.c:217:5: error: ‘insert_test5’ defined but not used [-Werror=unused-function]
  217 | int insert_test5(){ //factor de carga>0.7, se llama a función enlarge
      |     ^~~~~~~~~~~~
test.c:131:6: error: ‘compare_test’ defined but not used [-Werror=unused-function]
  131 | void compare_test(){
      |      ^~~~~~~~~~~~
test.c:125:6: error: ‘hash_test3’ defined but not used [-Werror=unused-function]
  125 | void hash_test3(){ //no random
      |      ^~~~~~~~~~
test.c:111:6: error: ‘hash_test2’ defined but not used [-Werror=unused-function]
  111 | void hash_test2(){ // colisiones
      |      ^~~~~~~~~~
test.c:100:6: error: ‘hash_test1’ defined but not used [-Werror=unused-function]
  100 | void hash_test1(){ // posición válida
      |      ^~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
d891945
Thu 11 May 2023 08:51:27 PM UTC: 
 hashmap.c | 1 -
 1 file changed, 1 deletion(-)
 tests:  12|2
total_score: 50/70
0201c4c
Thu 11 May 2023 08:51:38 PM UTC: 
 hashmap.c | 28 +++++++++-------------------
 1 file changed, 9 insertions(+), 19 deletions(-)
 tests:  12|2
total_score: 50/70
6362e10
Thu 11 May 2023 08:52:22 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
7d60424
Thu 11 May 2023 08:52:29 PM UTC: 
 hashmap.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  12|2
total_score: 50/70
d32af4c
Thu 11 May 2023 09:00:24 PM UTC: 
 hashmap.c | 24 +++++++++++++++++++++++-
 1 file changed, 23 insertions(+), 1 deletion(-)
 tests:  13|1
total_score: 60/70
503552a
Thu 11 May 2023 09:01:51 PM UTC: 
 hashmap.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  13|1
total_score: 60/70
310262c
